--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         display: flex;
         align-items: center;
       }
-      a{
+      a {
         text-decoration: none;
       }
 
@@ -50,7 +50,7 @@
       <div id="signin">
         <li>
           <i class="fas fa-user" class="search-icon"></i>
-          <a class="drop" href="signin.html" target="_blank">
+          <a class="drop" href="signin.html" target="">
             Account
             <i class="fa-solid fa-caret-down"></i>
           </a>
@@ -74,7 +74,7 @@
             <div>
               <i
                 class="fa-solid fa-magnifying-glass"
-                style="color: #212121"
+                style="color: #212121 "
               ></i>
               <input type="text" placeholder="Location" id="location" />
             </div>
@@ -99,38 +99,38 @@
       </div>
       <div class="top">Top Destinations</div>
       <div id="topdestination">
-        <a href="#">
+        <a href="./Secondpage.html">
           <div class="img">
             <h2>Goa</h2>
             <p>Vacation Rentals</p>
           </div>
         </a>
         <a href="#">
-          <div class="img">
-            <h2> Kerala</h2>
+          <div class="img img2">
+            <h2>Kerala</h2>
             <p>Vacation Rentals</p>
           </div>
         </a>
         <a href="#">
-          <div class="img">
-            <h2> Bali</h2>
+          <div class="img img3">
+            <h2>Bali</h2>
             <p>Vacation Rentals</p>
           </div>
         </a>
         <a href="#">
-          <div class="img">
-            <h2> Paris</h2>
+          <div class="img img4">
+            <h2>Paris</h2>
             <p>Vacation Rentals</p>
           </div>
         </a>
         <a href="#">
-          <div class="img">
+          <div class="img img5">
             <h2>Rome</h2>
             <p>Vacation Rentals</p>
           </div>
         </a>
         <a href="#">
-          <div class="img">
+          <div class="img img6">
             <h2>Himachal Pradesh</h2>
             <p>Vacation Rentals</p>
           </div>
@@ -175,23 +175,23 @@
             <p>Kenisha Holiday Homes</p>
             <p>Pawasalwadi, Maharashtra</p>
           </div>
-          <div class="community-back2">
+          <div class="community-back community-back2">
             <p>Kenisha Holiday Homes</p>
             <p>Pawasalwadi, Maharashtra</p>
           </div>
-          <div class="community-back3">
+          <div class="community-back community-back3">
             <p>Kenisha Holiday Homes</p>
             <p>Pawasalwadi, Maharashtra</p>
           </div>
-          <div class="community-back4">
+          <div class="community-back community-back4">
             <p>Kenisha Holiday Homes</p>
             <p>Pawasalwadi, Maharashtra</p>
           </div>
-          <div class="community-back5">
+          <div class="community-back community-back5">
             <p>Kenisha Holiday Homes</p>
             <p>Pawasalwadi, Maharashtra</p>
           </div>
-          <div class="community-back6">
+          <div class="community-back community-back6">
             <p>Kenisha Holiday Homes</p>
             <p>Pawasalwadi, Maharashtra</p>
           </div>
@@ -266,6 +266,43 @@
           </div>
           <button>LIST YOUR PROPERTY</button>
         </div>
+      </div>
+      <div class="top">Vacation Ideas</div>
+      <div id="topdestination">
+        <a href="#">
+          <div class="img idea1">
+            <p>Phuket's Best Pool Villas</p>
+          </div>
+        </a>
+        <a href="#">
+          <div class="img idea1 idea2">
+            <p>Coorg Homestays</p>
+          </div>
+        </a>
+        <a href="#">
+          <div class="img idea1 idea3">
+            <h2>Bali</h2>
+            <p>Vacation Rentals</p>
+          </div>
+        </a>
+        <a href="#">
+          <div class="img idea1 idea4">
+            <h2>Paris</h2>
+            <p>Vacation Rentals</p>
+          </div>
+        </a>
+        <a href="#">
+          <div class="img idea1 idea5">
+            <h2>Rome</h2>
+            <p>Vacation Rentals</p>
+          </div>
+        </a>
+        <a href="#">
+          <div class="img idea1 idea6">
+            <h2>Himachal Pradesh</h2>
+            <p>Vacation Rentals</p>
+          </div>
+        </a>
       </div>
     </main>
     <footer>
