--- a/signin.html
+++ b/signin.html
@@ -10,7 +10,7 @@
   <body>
     <div class="container">
       <div class="nav">
-        <a href="./signin.html">Log in</a>
+        <a href="/signin.html">Log in</a>
         <a href="./signup.html">Register</a>
       </div>
       <div id="signin">
