--- a/Secondpage.html
+++ b/Secondpage.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Trippora</title>
+    
     <script
       src="https://kit.fontawesome.com/34f228070e.js"
       crossorigin="anonymous"
@@ -13,7 +14,7 @@
   </head>
   <body>
     <nav>
-      <img src="./images/new png.png" alt="" />
+      <img src="./images/tr.png" alt="" />
       <div id="signin">
         <!-- <li> -->
         <i class="fas fa-user" class="search-icon"></i>
@@ -51,7 +52,7 @@
               class="fa-solid fa-arrow-right-from-bracket"
               style="color: #212121"
             ></i>
-            <input type="" placeholder="Check out" name="" class="input" />
+            <input type="" placeholder="Check out" name="" class="input " id="inputout"/>
             <input type="text" placeholder="Guests" class="input" />
           </div>
 
@@ -66,7 +67,106 @@
         <hr />
         <div id="cities"></div>
       </div>
+      <div class="mid">
+        <p>Home / India / Goa</p>
+        <hr />
+        <h2>Goa Holiday Homes</h2>
+        <div class="photos">
+          <a href="#" class="color">
+            <div class="first">
+              <img
+                src="https://d2vcelvjdj7n25.cloudfront.net/media/property_photos/image_640x960/29525985/85be9537001f11e890160a8e1b1ce4da_mob_thumbnail.jpeg"
+                alt=""
+              />
+              <div class="text">
+                <p>Holiday Home Stay</p>
+                <p>colva,goa,India</p>
+                <p>
+                  Apartment | 2 BR | 2 Bath | Swimming Pool | Wifi | TV | AC
+                </p>
+                <div class="price">
+                  <p>€48</p>
+                  <p>per night</p>
+                </div>
+              </div>
+            </div>
+          </a>
+          <a href="#" class="color">
+            <div class="first">
+              <img
+                src="https://d2vcelvjdj7n25.cloudfront.net/media/property_photos/image_640x960/13879959/1_mob_thumbnail.jpeg"
+                alt=""
+              />
+              <div class="text">
+                <p>A Stunning Vacation Home </p>
+                <p>candolim,goa,India</p>
+                <p>
+                 Villa | 3 BR | 3 Bath | Swimming Pool | Wifi | TV | AC
+                </p>
+                <div class="price">
+                  <p>€533</p>
+                  <p>per night</p>
+                </div>
+              </div>
+            </div>
+          </a>
+          <a href="#" class="color">
+            <div class="first">
+              <img
+                src="https://d2vcelvjdj7n25.cloudfront.net/media/property_photos/image_640x960/29525985/85be9537001f11e890160a8e1b1ce4da_mob_thumbnail.jpeg"
+                alt=""
+              />
+              <div class="text">
+                <p>Holiday Home Stay</p>
+                <p>colva,goa,India</p>
+                <p>
+                  Apartment | 2 BR | 2 Bath | Swimming Pool | Wifi | TV | AC
+                </p>
+                <div class="price">
+                  <p>€48</p>
+                  <p>per night</p>
+                </div>
+              </div>
+            </div>
+          </a>
+          <a href="#" class="color">
+            <div class="first">
+              <img
+                src="https://d2vcelvjdj7n25.cloudfront.net/media/property_photos/image_640x960/29525985/85be9537001f11e890160a8e1b1ce4da_mob_thumbnail.jpeg"
+                alt=""
+              />
+              <div class="text">
+                <p>Holiday Home Stay</p>
+                <p>colva,goa,India</p>
+                <p>
+                  Apartment | 2 BR | 2 Bath | Swimming Pool | Wifi | TV | AC
+                </p>
+                <div class="price">
+                  <p>€48</p>
+                  <p>per night</p>
+                </div>
+              </div>
+            </div>
+          </a>
+        </div>
+      </div>
     </main>
+    <footer>
+      <h2>About Location</h2>
+      <p>Goa is India's smallest state by area and the fourth smallest by population. Located on the west coast of India in the region known as the Konkan, it is bounded by the state of Maharashtra to the north, and by Karnataka to the east and south, while the Arabian Sea forms its western coast. Panaji is the state's capital, while Vasco da Gama is the largest city. The historic city of Margao still exhibits the cultural influence of the Portuguese, who first landed in the early 16th century as merchants, and conquered it soon thereafter. The Portuguese overseas territory existed for about 450 years, until it was annexed by India in 1961. Renowned for its beaches, places of worship and world heritage architecture, Goa is visited by large numbers of international and domestic tourists each year. It also has rich flora and fauna, owing to its location on the Western Ghats range, which is classified as a biodiversity hotspot.</p>
+      <p>Goa has two World Heritage Sites: the Bom Jesus Basilica and a few designated convents. The Basilica holds the mortal remains of St. Francis Xavier, regarded by many Catholics as the patron saint of Goa (the patron of the Archdiocese of Goa is actually the Blessed Joseph Vaz). Once every twelve years, the body is taken down for veneration and for public viewing. The last such event was conducted in 2004. The Velhas Conquistas regions are also known for its Goa-Portuguese style architecture. There are many forts in Goa such as Tiracol, Chapora, Corjuem, Aguada, Gaspar Dias and Cabo de Rama.</p>
+      <p>In many parts of Goa, mansions constructed in the Indo-Portuguese style architecture still stand, though in some villages, most of them are in a dilapidated condition. Fontainhas in Panaji has been declared a cultural quarter, showcasing the life, architecture and culture of Goa. Some influences from the Portuguese era are visible in some of Goa's temples, notably the Mangueshi Temple and the Mahalasa Temple, although after 1961, many of these were demolished and reconstructed in the indigenous Indian style.
+        Goa also has a few museums, the two important ones being Goa State Museum and the Naval Aviation Museum. The Aviation museum is the only one of its kind in the whole of India. Also, a place not well known to tourists is the Goa Science Center, which is located in Panjim.</p>
+        <h2>FAQs</h2>
+        <h5>Can I get a holiday home with swimming pool in Goa?</h5>
+        <p>Yes. We have close to 197 holiday homes with swimming pool in Goa. You can also choose a villa or bungalow with a swimming pool. Each vacation rental will have its own swimming pool policies & timings though. Make sure you talk to the property manager or the owner when you make a reservation.</p>
+        <h5>What are the most popular destinations in Goa?</h5>
+        <p>Tripvillas has around 300 of vacation rentals in Goa. Some of the most popular destinations are Candolim (62 vacation rentals), Calangute (35 vacation rentals), Arpora (32 vacation rentals), Baga (13 vacation rentals), Benaulim (12 vacation rentals), Varca (11 vacation rentals), Morjim (10 vacation rentals), Anjuna (9 vacation rentals), Colva (9 vacation rentals), Sinquerim (9 vacation rentals).</p>
+        <h5>Can I get any accommodation in Goa if I am travelling with my family or a group of friends?</h5>
+        <p>You will have to choose number of bedrooms depending on the group size. You can go for any of the 91 Apartments, 83 Villas. You can go for 46 1BHK, 56 2BHKS, 46 3BHKS, 24 4BHKS, 9 5BHKS holiday homes</p>
+        <h5>What are the different types of holiday homes I can get in Goa?</h5>
+        <p>Tripvillas has different types of holiday homes you can choose from in Goa. We have 91 Apartments, 5 Cottages, 10 Homestays, 28 Resorts, 74 Rooms, 83 Villas</p>
+    </footer>
   </body>
   <script src="/Scripts/second.js"></script>
 </html>
