--- a/index.html
+++ b/index.html
@@ -11,14 +11,15 @@
     ></script>
     <link rel="stylesheet" href="./style/index.css" />
     <style>
+      @import url('https://fonts.googleapis.com/css2?family=Manrope&family=Quicksand&family=Roboto&display=swap');
       * {
         padding: 0px;
         margin: 0px;
-        font-family: Cambria, Cochin, Georgia, Times, "Times New Roman", serif;
+        font-family:Manrope;
       }
       nav {
         font-size: large;
-        background-color: #212121;
+        background-color: #37474F;
         height: 60px;
         display: flex;
         align-items: center;
@@ -46,7 +47,7 @@
 
   <body>
     <nav>
-      <img src="./images/new png.png" alt="" />
+      <img src="./images/tr.png" alt="" />
       <div id="signin">
         <li>
           <i class="fas fa-user" class="search-icon"></i>
@@ -54,12 +55,12 @@
             Account
             <i class="fa-solid fa-caret-down"></i>
           </a>
-          <div id="dropdown">
+          <!-- <div id="dropdown">
             <ul>
               <li><a href="/signin.html">Sign in</a></li>
               <li><a href="/signup.html">Sign up</a></li>
             </ul>
-          </div>
+          </div> -->
         </li>
       </div>
     </nav>
@@ -73,21 +74,21 @@
           <div class="banner-mid">
             <div>
               <i
-                class="fa-solid fa-magnifying-glass"
+                class="fa-solid fa-magnifying-glass size"
                 style="color: #212121 "
               ></i>
               <input type="text" placeholder="Location" id="location" />
             </div>
             <div>
               <i
-                class="fa-solid fa-arrow-right-to-bracket"
+                class="fa-solid fa-arrow-right-to-bracket size" 
                 style="color: #212121"
               ></i>
               <input type="" placeholder="Check in" name="" class="input" />
             </div>
             <div>
               <i
-                class="fa-solid fa-arrow-right-from-bracket"
+                class="fa-solid fa-arrow-right-from-bracket size"
                 style="color: #212121"
               ></i>
               <input type="" placeholder="Check out" name="" class="input" />
