--- a/Secondpage.html
+++ b/Secondpage.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Trippora</title>
-    
+    <link rel="shortcut icon" href="/images/tr (1).png" type="image/x-icon">
     <script
       src="https://kit.fontawesome.com/34f228070e.js"
       crossorigin="anonymous"
@@ -91,15 +91,15 @@
               </div>
             </div>
           </a>
-          <a href="#" class="color">
+          <a href="third.html" class="color">
             <div class="first">
               <img
-                src="https://d2vcelvjdj7n25.cloudfront.net/media/property_photos/image_640x960/13879959/1_mob_thumbnail.jpeg"
+                src="https://d2vcelvjdj7n25.cloudfront.net/media/property_photos/image_640x960/26125358/img_4610_mob_thumbnail.jpeg"
                 alt=""
               />
               <div class="text">
-                <p>A Stunning Vacation Home </p>
-                <p>candolim,goa,India</p>
+                <p>Leisure Cottages Stay</p>
+                <p> Calangute, Goa, India | Baga</p>
                 <p>
                  Villa | 3 BR | 3 Bath | Swimming Pool | Wifi | TV | AC
                 </p>
@@ -113,7 +113,7 @@
           <a href="#" class="color">
             <div class="first">
               <img
-                src="https://d2vcelvjdj7n25.cloudfront.net/media/property_photos/image_640x960/29525985/85be9537001f11e890160a8e1b1ce4da_mob_thumbnail.jpeg"
+                src="https://d2vcelvjdj7n25.cloudfront.net/media/property_photos/image_640x960/10519707/fd1e2655ac7c11e99e4f0a8e1b1ce4da_mob_thumbnail.jpeg"
                 alt=""
               />
               <div class="text">
@@ -132,7 +132,7 @@
           <a href="#" class="color">
             <div class="first">
               <img
-                src="https://d2vcelvjdj7n25.cloudfront.net/media/property_photos/image_640x960/29525985/85be9537001f11e890160a8e1b1ce4da_mob_thumbnail.jpeg"
+                src="https://d2vcelvjdj7n25.cloudfront.net/media/property_photos/image_640x960/20917413/2_1_mob_thumbnail.jpeg"
                 alt=""
               />
               <div class="text">
