--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Trippora</title>
+    <link rel="shortcut icon" href="/images/tr (1).png" type="image/x-icon">
     <script
       src="https://kit.fontawesome.com/34f228070e.js"
       crossorigin="anonymous"
@@ -67,7 +68,7 @@
     <main>
       <div id="banner">
         <div>
-          <div>
+          <div class="word">
             <p>Book <s> Hotels</s> Vacation Rentals</p>
             <p>Top Holiday Homes - Villas, Apartments & Homestays</p>
           </div>
@@ -282,26 +283,22 @@
         </a>
         <a href="#">
           <div class="img idea1 idea3">
-            <h2>Bali</h2>
-            <p>Vacation Rentals</p>
+            <p>Family Bungalows in Lonavala</p>
           </div>
         </a>
         <a href="#">
           <div class="img idea1 idea4">
-            <h2>Paris</h2>
-            <p>Vacation Rentals</p>
+            <p>Bali Family Villas</p>
           </div>
         </a>
         <a href="#">
           <div class="img idea1 idea5">
-            <h2>Rome</h2>
-            <p>Vacation Rentals</p>
+            <p>Sri Lanka - Rural solitude and luxury combined</p>
           </div>
         </a>
         <a href="#">
           <div class="img idea1 idea6">
-            <h2>Himachal Pradesh</h2>
-            <p>Vacation Rentals</p>
+            <p>Luxury Vacation in Goa </p>
           </div>
         </a>
       </div>
