--- a/signup.html
+++ b/signup.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Sign up Page</title>
+    <link rel="shortcut icon" href="/images/tr (1).png" type="image/x-icon" />
     <link rel="stylesheet" href="style/signup.css" />
   </head>
 
@@ -43,7 +44,10 @@
       };
       user_data.push(obj);
       localStorage.setItem("account-data", JSON.stringify(user_data));
-      alert("Register Successful")
+      alert("Register Successful");
+      setTimeout(() => {
+        window.location.href = "signin.html";
+      }, 2000);
     });
   </script>
 </html>
