--- a/third.html
+++ b/third.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Trippora</title>
+    <link rel="shortcut icon" href="/images/tr (1).png" type="image/x-icon">
     <script
       src="https://kit.fontawesome.com/34f228070e.js"
       crossorigin="anonymous"
@@ -22,35 +23,126 @@
         </a>
       </div>
     </nav>
-    <main>
+    <main style="padding: 8px">
       <div class="detail">
         <p>Home / India / Goa / Candolim /. #13879959</p>
-        <hr />
+        <hr style="width: 97%" />
         <div class="detail-part">
           <div class="detail-img">
             <img
-              src="https://d2vcelvjdj7n25.cloudfront.net/media/property_photos/image_640x960/13879959/12_mob_thumbnail.jpeg"
+              src="https://d2vcelvjdj7n25.cloudfront.net/media/property_photos/image_640x960/26125358/img_4610_mob_thumbnail.jpeg"
               alt=""
             />
             <div class="detail-small-img">
               <img
-                src="https://d2vcelvjdj7n25.cloudfront.net/media/property_photos/image_watermarked_1024/13879959/11_watermarked_image_1024.jpeg"
+                src="https://d2vcelvjdj7n25.cloudfront.net/media/property_photos/image_280x210/26125358/img_4613_mid_thumbnail.jpeg"
                 alt=""
               />
               <img
-                src="https://d2vcelvjdj7n25.cloudfront.net/media/property_photos/image_watermarked_1024/13879959/9_watermarked_image_1024.jpeg"
+                src="https://d2vcelvjdj7n25.cloudfront.net/media/property_photos/image_280x210/26125358/img_4611_mid_thumbnail.jpeg"
                 alt=""
               />
             </div>
+            <div class="map">
+              <button><i class="fa-solid fa-circle-info"></i>OVERVIEW</button>
+              <button><i class="fa-solid fa-tag"></i>AMENITIES</button>
+              <button><i class="fa-solid fa-location-dot"></i> MAP</button>
+              <button><i class="fa-solid fa-list"></i>POLICIES & FEES</button>
+            </div>
           </div>
           <div class="text">
-            <div>A Stunning Vacation Home In Candolim</div>
-            <p>Candolim, Goa, India | Candolim</p>
-            <hr>
+            <div>Leisure Cottages Stay</div>
+            <p>
+              <i class="fa-solid fa-location-dot"></i> Calangute, Goa, India |
+              Baga
+            </p>
+            <hr />
+            <div id="room">
+              <p>PRIVATE ROOM</p>
+              <p>3 MAX GUESTS</p>
+              <p>WIFI</p>
+              <p>AC</p>
+              <p>CARETAKER</p>
+            </div>
           </div>
         </div>
       </div>
-      <div class="bill"></div>
+      <hr />
+      <div class="bill">
+        <p>Starting</p>
+        <div class="price">
+          <p>€79</p>
+          <p>per night</p>
+        </div>
+        <div class="book">Your dates are available to book</div>
+        <input type="text" placeholder="2 units" />
+        <div class="date">
+          <input type="text" placeholder="2/12/2022" />
+          <input type="text" placeholder="10/12/2022" />
+        </div>
+        <input type="text" placeholder="2 guest" />
+        <p>Rateplan: No meals provided (European Plan)</p>
+        <div class="total">
+          <div>
+            <h6>Total</h6>
+            <p></p>
+          </div>
+          <div>
+            <h5>€535.85</h5>
+            <p>View details</p>
+          </div>
+        </div>
+        <button>Request to Book</button>
+      </div>
     </main>
+    <p class="keyA">Key Amenities</p>
+    <hr style="width: 60%;margin-left: 25px;" />
+    <div class="key">
+      <p>SHOPPING CLOSE BY</p>
+      <p>HEATING</p>
+      <p>SAFE LOCKER/DEPOSIT BOX</p>
+      <p>WINE FRIDGE</p>
+      <p>REFRIGERATOR</p>
+      <p>TELEVISION</p>
+      <p>SATELLITE/CABLE CONNECTION</p>
+      <p>LAUNDRY & DRY CLEANING SERVICE</p>
+      <p>ROOM SERVICE</p>
+      <p>BROADBAND</p>
+      <p>LINEN PROVIDED</p>
+      <p>HOT WATER</p>
+      <p>WESTERN TOILET</p>
+      <p>SHOWER</p>
+      <p>HOUSEKEEPING</p>
+      <p>RESTAURANTS CLOSE BY</p>
+      <p>FAN</p>
+      <p>AIR CONDITIONING</p>
+      <p>WIRELESS INTERNET</p>
+      <p>PUBLIC TRANSPORTATION</p>
+      <p>TEA/COFFEE MAKER</p>
+      <p>BEACH NEARBY</p>
+      <p>BALCONY</p>
+      <p>24/7 POWER</p>
+    </div>
+    <footer>
+      <h5>Bedroom 1</h5>
+      <p>1 DOUBLE BED(S)</p>
+      <h5>Bathroom 1</h5>
+      <p>Bathroom 1 info not found.</p>
+      <h4>Policies & Fees</h4>
+      <hr />
+      <p><b>Default Cancellation Policy</b></p>
+      <div class="last">
+        <p>
+          <b>Stringent:</b> No charges will be levied if booking is canceled 61
+          days prior to check-in. If cancellation is done between 30 to 60 days
+          prior to check-in, 50% of the total booking amount will be charged.
+          Post that, there will be no refund.
+        </p>
+        <div>
+          <p><b> House Rules</b></p>
+          <p>Loud Music not allowed.</p>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
